<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Seafile</string>
    <string name="app_url" translatable="false">http://seafile.com</string>
    <string name="welcome_to_seafile">Welcome to Seafile</string>
    <string name="select_account">Choose an account to start</string>
    <string name="edit_account">Edit</string>
    <string name="ignore">Ignore</string>
    <string name="delete_account">Delete</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="delete_repo">Are you sure you want to delete this library?</string>
    <string name="delete_file">Are you sure you want to delete this file or folder?</string>
    <string name="delete_records">Are you sure you want to delete records?</string>
    <string name="delete_wiki_tip">Are you sure you want to delete this wiki?</string>
    <string name="unpublish_wiki_tip">Are you sure you want to unpublish?</string>
    <string name="delete_records_and_file">Are you sure you want to delete records and locally downloaded file?</string>
    <string name="delete_successful">Successfully deleted</string>
    <string name="delete_repo_title">Delete library</string>
    <string name="delete_wiki_title">Delete Wiki</string>
    <string name="delete_file_f">Delete file</string>
    <string name="deleted_some_files">Deleted %d files</string>
    <string name="delete_local_file_sametime">Delete local files at the same time</string>
    <string name="recover_library">Recover library</string>
    <string name="recover_file">Recover file</string>
    <string name="move_file">Move file</string>
    <string name="update_file">Update file</string>
    <string name="recover_folder">Recover folder</string>
    <string name="move_folder">Move folder</string>
    <string name="delete_dir">Delete folder</string>
    <string name="delete_some_dirs">Deleted %d folders</string>
    <string name="name_hint">Name</string>
    <string name="server">Server</string>
    <string name="server_hint">Server address</string>
    <string name="email_hint">Email or Username</string>
    <string name="passwd_hint">Password</string>
    <string name="passwd_min_len_limit_hint">Password (at least %d characters)</string>
    <string name="passwd_confirmation_hint">Password again</string>
    <string name="login">Log In</string>
    <string name="open_file">Open</string>
    <string name="download_file">Download</string>
    <string name="redownload_file">Download again</string>
    <string name="cancel_download">Cancel</string>
    <string name="unknown_file_type">Unknown file-type</string>
    <string name="activity_not_found">Can\`t find App to open this file</string>
    <string name="refresh">Refresh</string>
    <string name="add_account">Add Account</string>
    <string name="personal">Personal</string>
    <string name="shared">Shared</string>
    <string name="libraries">Libraries</string>
    <string name="my_libraries">My Own Libraries</string>
    <string name="my_wiki">My Wikis</string>
    <string name="my_wiki_of_shared">Shared</string>
    <string name="my_wiki_of_old">Old</string>
    <string name="cached">Cached</string>
    <string name="activities">Activities</string>
    <string name="pick_upload_type">Upload</string>
    <string name="accounts_https_hint" translatable="false">https</string>
    <string name="transfer_tasks">Transfer List</string>
    <string name="accounts">Accounts</string>
    <string name="settings">Settings</string>
    <string-array name="pick_upload_array">
        <item>File</item>
        <item>Photos/Videos</item>
        <item>Other</item>
    </string-array>
    <string name="choose_server">Choose a Seafile Server</string>
    <string-array name="choose_server_array">
        <item>Single Sign-On</item>
        <item>Other Seafile Server</item>
    </string-array>
    <string name="server_name_top" translatable="false">cloud.seafile.com</string>
    <string name="server_url_seacloud" translatable="false">https://cloud.seafile.com</string>
    <string name="network_down">No network connection</string>
    <string name="unknow_error">Unknown error</string>
    <string name="invalid_server_address">Invalid server address</string>
    <string name="err_server_andress_empty">Server address can\`t be empty</string>
    <string name="err_email_empty">Email can\`t be empty</string>
    <string name="err_passwd_empty">Password can\`t be empty</string>
    <string name="err_passwd_too_short">Password is too short</string>
    <string name="err_passwd_mismatch">The passwords don\`t match</string>
    <string name="err_login_failed">Login failed</string>
    <string name="err_wrong_user_or_passwd">Email or password error</string>
    <string name="err_token_expired">Authentication expired, please login again</string>
    <string name="upload_file">Upload file</string>
    <string name="upload">Upload</string>
    <string name="uploaded">Uploaded</string>
    <string name="re_upload">Upload again</string>
    <string name="updated">Updated</string>
    <string name="download_failed">Download failed</string>
    <string name="download_waiting">Download waiting</string>
    <string name="download_finished">Download finished</string>
    <string name="download_completed">Download completed</string>
    <string name="download_cancelled">Download cancelled</string>
    <string name="task_cancel">Cancel</string>
    <string name="task_retry">Retry</string>
    <string name="task_remove">Remove</string>
    <string name="task_remove_all_cancelled">Remove all cancelled tasks</string>
    <string name="task_remove_all_finished">Remove all finished tasks </string>
    <string name="repo_action_delete">Delete</string>
    <string name="repo_action_rename">Rename</string>
    <string name="file_action_star">Star</string>
    <string name="file_action_download">Download</string>
    <string name="file_action_update">Upload</string>
    <string name="file_share">Share</string>
    <string name="file_share_leave">Leave share</string>
    <string name="file_action_share_wechat">Share to WeChat</string>
    <string name="file_action_share_link">Share link</string>
    <string name="file_action_share_encrypt">Share link with password</string>
    <string name="file_action_export">Export</string>
    <string name="file_action_open">Open with</string>
    <string name="file_action_save_as">Save as</string>
    <string name="file_action_delete">Delete</string>
    <string name="file_action_rename">Rename</string>
    <string name="file_action_copy">Copy</string>
    <string name="file_action_move">Move</string>
    <string name="file_action_open_as">Open as</string>
    <string name="file_action_profile">Profile</string>
    <string name="file_action_more">More</string>
    <string name="file_action_more_title">Choose your preferred option</string>
    <string-array name="file_action_more_array">
        <item>Export</item>
        <item>Copy</item>
        <item>Move</item>
        <item>Star</item>
    </string-array>
    <string-array name="file_type_array">
        <item>Text</item>
        <item>Audio</item>
        <item>Video</item>
        <item>Image</item>
        <item>Other</item>
    </string-array>
    <string-array name="file_action_share_array_zh" translatable="false">
        <item>@string/file_action_share_wechat</item>
        <item>@string/file_action_share_link</item>
        <item>@string/file_action_share_encrypt</item>
    </string-array>
    <string-array name="file_action_share_array" translatable="false">
        <item>@string/file_action_share_link</item>
        <item>@string/file_action_share_encrypt</item>
    </string-array>
    <string name="wait">Wait</string>
    <string name="image_gallery_NoImageView_text">No image found</string>
    <string name="pick_photo_video_title">Choose photos/videos to upload</string>
    <string name="select_upload_items">Select items to upload</string>
    <plurals name="n_upload_items_selected">
        <item quantity="one">%1$d item selected</item>
        <item quantity="other">%1$d items selected</item>
    </plurals>
    <string name="repo_name_empty">Please enter the name of the library</string>
    <string name="dir_name_empty">Please enter the name of the folder</string>
    <string name="file_name_empty">Please enter the name of the file</string>
    <string name="password_empty">Please enter the password</string>
    <string name="name_contains_slash">Name cannot contain slash</string>
    <string name="name_contains_backtick">Name cannot contain backtick</string>
    <string name="name_contains_backslash">Name cannot contain backslash</string>
    <string name="name_cannot_be_double_dots">Name cannot be double dots</string>
    <string name="wrong_password">wrong password</string>
    <string name="library_read_only">This library is read-only</string>
    <string name="error_when_load_dirents">Error when loading the folder.\n Tap to refresh</string>
    <string name="error_when_load_repos">Error when loading libraries.\n Tap to refresh</string>
    <string name="error_when_load_activities">Error when loading activities.\n Tap to refresh</string>
    <string name="error_when_load_starred">Error when loading starred files.\n Tap to refresh</string>
    <string name="dir_empty">This folder is empty</string>
    <string name="no_repo">You have no libraries yet</string>
    <string name="no_album_type_data">You have no album types available for preview.</string>
    <string name="no_app_available">No app can be found</string>
    <string name="add_to_seafile">Add to Seafile</string>
    <string name="ok">OK</string>
    <string name="no_account">Please set up an account in Seafile first</string>
    <string name="choose_an_account">Choose an account</string>
    <string name="choose_a_library">Choose a library</string>
    <string name="choose_a_folder">Choose a folder</string>
    <string name="load_accounts_fail">Failed to load Seafile accounts</string>
    <string name="load_libraries_fail">Failed to load libraries</string>
    <string name="load_dir_fail">Failed to load contents of this folder</string>
    <string name="not_supported">Not supported at this time</string>
    <string name="not_supported_share">This type of share is not supported</string>
    <string name="not_supported_feature">This feature is not supported, please upgrade the server version</string>
    <string name="operation_timeout">The operation timed out</string>
    <string name="edit">Edit</string>
    <string name="select">Select</string>
    <string name="create_draft">Create draft</string>
    <string name="rename_draft">Rename draft</string>
    <string name="del_draft">Delete draft</string>
    <string name="update_draft">Update draft</string>
    <string name="release_draft">Release draft</string>
    <string name="encrypt">Encrypt</string>
    <string name="download_folder">Download folder</string>
    <string name="download_folder_title">Choose your preferred option</string>
    <string-array name="download_folder_options_array">
        <item>Download folder</item>
        <item>Download folder and subfolders</item>
    </string-array>
    <string name="add_repo">New Library</string>
    <string name="add_file">Add</string>
    <string-array name="add_file_options_array">
        <item>Create file</item>
        <item>Create folder</item>
        <item>Upload file</item>
        <item>Take a photo</item>
    </string-array>
    <string-array name="video_download_array">
        <item>play</item>
        <item>download</item>
    </string-array>
    <string name="client_cert_choose">Client certificate (mTLS)</string>
    <string name="client_cert_remove">Remove</string>
    <string name="client_cert_none">No client certificate selected</string>
    <string name="lockpattern_continue_button_text">Next</string>
</resources>