<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_actionbar" /><!-- placeholder, empty except on L -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/server_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/app_padding_horizontal"
        android:layout_marginTop="30dp"
        android:hint="@string/server_hint">

        <EditText
            android:id="@+id/server_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="auto"
            android:inputType="textUri" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/client_cert_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/app_padding_horizontal"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/client_cert_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/client_cert_none"
            android:textSize="@dimen/tv_txt_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/client_cert_button"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/client_cert_choose" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/client_cert_clear"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/app_widget_top_margin_small"
                android:text="@string/client_cert_remove"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/app_padding_horizontal"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/long_btn_height"
            android:text="@string/lockpattern_continue_button_text"
            android:textSize="@dimen/long_btn_txt_size" />
    </LinearLayout>

</LinearLayout>